<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modbus_hardware_interface</name>
  <version>0.0.0</version>
  <description>Generic hardware interface for Modbus Devices usage in ros2_control.</description>
  <maintainer email="daniel.azanov@stoglrobotics.de">Daniel Azanov</maintainer>
  <maintainer email="manual.muth@stoglrobotics.de">Manual Muth</maintainer>
  <maintainer email="denis.stogl@stoglrobotics.de">Dr. Denis Stogl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>libmodbus-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
